crates/reinhardt-pages/tests/ui/hooks/fail/unit_deps_removed.stderr
error[E0277]: the trait bound `ReactiveDeps: From<()>` is not satisfied
 --> tests/ui/hooks/fail/unit_deps_removed.rs:7:39
  |
7 |     let _effect = use_effect(move || {}, ());
  |                   ----------             ^^ the trait `From<()>` is not implemented for `ReactiveDeps`
  |                   |
  |                   required by a bound introduced by this call
  |
help: the trait `From<()>` is not implemented for `ReactiveDeps`
      but trait `From<ExplicitDeps>` is implemented for it
 --> $WORKSPACE/crates/reinhardt-core/src/reactive/deps.rs
  |
  | impl From<ExplicitDeps> for ReactiveDeps {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = help: for that trait implementation, expected `ExplicitDeps`, found `()`
  = note: required for `()` to implement `Into<ReactiveDeps>`
note: required by a bound in `use_effect`
 --> src/reactive/hooks/effect.rs
  |
  | pub fn use_effect<F, C>(f: F, deps: impl Into<ReactiveDeps>) -> Effect
  |                                          ^^^^^^^^^^^^^^^^^^ required by this bound in `use_effect`
